#159093: Use just Level.INFO to report missing Class-Path: ext/something.jar