@@ -44,16 +44,16 @@ package org.netbeans;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.net.JarURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URLConnection;
 import java.net.URLStreamHandler;
-import java.net.URLStreamHandlerFactory;
 import java.security.CodeSource;
 import java.security.PermissionCollection;
 import java.security.Policy;
@@ -61,6 +61,7 @@ import java.security.ProtectionDomain;
 import java.security.cert.Certificate;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -76,6 +77,8 @@ import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.zip.ZipEntry;
+import java.util.zip.ZipException;
+import org.openide.util.Utilities;
 
 /**
  * A ProxyClassLoader capable of loading classes from a set of jar files
@@ -98,41 +101,25 @@ public class JarClassLoader extends ProxyClassLoader {
      * additional request, if it was still doing so.
      */    
     public static void saveArchive() {
-        archive.stopGathering();
-        archive.stopServing();
         if (cache != null) {
             try {
                 archive.save(cache);
             } catch (IOException ioe) {
                 LOGGER.log(Level.WARNING, null, ioe);
             }
+        } else {
+            archive.stopGathering();
+            archive.stopServing();
         }
     }
     
     static {
-        ResURLStreamHandlerFactory fact = new ResURLStreamHandlerFactory();
-        try {
-            java.net.URL.setURLStreamHandlerFactory(fact);
-        } catch (Error e) {
-            try {
-                for (Field f : URL.class.getDeclaredFields()) {
-                    if (f.getType() == URLStreamHandlerFactory.class) {
-                        f.setAccessible(true);
-                        fact.del = (URLStreamHandlerFactory)f.get(null);
-                        f.set(null, null);
-                        break;
-                    }
-                }
-                URL.setURLStreamHandlerFactory(fact);
-            } catch (Throwable t) {
-                throw new InternalError(); // can't really continue
-            }
-        }
+        ProxyURLStreamHandlerFactory.register();
     }
     
     private static final Logger LOGGER = Logger.getLogger(JarClassLoader.class.getName());
 
-    private Source[] sources = new Source[0];
+    private final Source[] sources;
     private Module module;
     
     /** Creates new JarClassLoader.
@@ -152,22 +139,15 @@ public class JarClassLoader extends ProxyClassLoader {
     public JarClassLoader(List<File> files, ClassLoader[] parents, boolean transitive, Module mod) {
         super(parents, transitive);
         this.module = mod;
-        addSources(files);
-    }
-    
-    /** Boot classloader needs to add entries for netbeans.user later.
-     */
-    final void addSources (List<File> newSources) {
-        ArrayList<Source> l = new ArrayList<Source> (sources.length + newSources.size ());
-        l.addAll (Arrays.asList (sources));
+        List<Source> l = new ArrayList<Source>(files.size());
         try {
-            for (File file : newSources) {
+            for (File file : files) {
                 l.add(Source.create(file, this));
             }
         } catch (IOException exc) {
             throw new IllegalArgumentException(exc.getMessage());
         }
-        sources = l.toArray (sources);
+        sources = l.toArray(new Source[l.size()]);
         // overlaps with old packages doesn't matter,PCL uses sets.
         addCoveredPackages(getCoveredPackages(module, sources));
     }
@@ -210,6 +190,7 @@ public class JarClassLoader extends ProxyClassLoader {
         return val;
     }
 
+    private Boolean patchingBytecode;
     @Override
     protected Class doLoadClass(String pkgName, String name) {
         String path = name.replace('.', '/').concat(".class"); // NOI18N
@@ -219,10 +200,22 @@ public class JarClassLoader extends ProxyClassLoader {
             Source src = sources[i];
             byte[] data = src.getClassData(path);
             if (data == null) continue;
-            
-            // do the enhancing
-            byte[] d = PatchByteCode.patch (data, name);
-            data = d;
+
+            synchronized (sources) {
+                if (patchingBytecode == null) {
+                    patchingBytecode = findResource("META-INF/.bytecodePatched") != null; // NOI18N
+                    if (patchingBytecode) {
+                        LOGGER.log(Level.FINE, "Patching bytecode in {0}", this);
+                    }
+                }
+            }
+            if (patchingBytecode) {
+                try {
+                    data = PatchByteCode.patch(data);
+                } catch (Exception x) {
+                    LOGGER.log(Level.INFO, "Could not bytecode-patch " + name, x);
+                }
+            }
             
             // Note that we assume that if we are defining a class in this package,
             // we should also define the package! Thus recurse==false.
@@ -236,7 +229,12 @@ public class JarClassLoader extends ProxyClassLoader {
                 if (pkg.isSealed() && !pkg.isSealed(src.getURL())) throw new SecurityException("sealing violation"); // NOI18N
             } else {
                 Manifest man = module == null || src != sources[0] ? src.getManifest() : module.getManifest();
-                definePackage (pkgName, man, src.getURL());
+                try {
+                    definePackage(pkgName, man, src.getURL());
+                } catch (IllegalArgumentException x) {
+                    // #156478: possibly a race condition defining packages in parallel parents? Ignore.
+                    LOGGER.log(Level.FINE, null, x);
+                }
             }
 
             return defineClass (name, data, 0, data.length, src.getProtectionDomain());
@@ -245,7 +243,7 @@ public class JarClassLoader extends ProxyClassLoader {
     }
     // look up the jars and return a resource based on a content of jars
     @Override
-    protected URL findResource(String name) {
+    public URL findResource(String name) {
         for( int i=0; i<sources.length; i++ ) {
             URL item = sources[i].getResource(name);
             if (item != null) return item;
@@ -254,7 +252,7 @@ public class JarClassLoader extends ProxyClassLoader {
     }
 
     @Override
-    protected Enumeration<URL> simpleFindResources(String name) {
+    public Enumeration<URL> findResources(String name) {
         Vector<URL> v = new Vector<URL>(3);
         // look up the jars and return a resource based on a content of jars
 
@@ -288,6 +286,8 @@ public class JarClassLoader extends ProxyClassLoader {
         public final URL getURL() {
             return url;
         }
+
+        public abstract String getPath();
         
         public final ProtectionDomain getProtectionDomain() {
             if (pd == null) {
@@ -313,7 +313,7 @@ public class JarClassLoader extends ProxyClassLoader {
             try {
                 return readClass(path);
             } catch (IOException e) {
-                LOGGER.log(Level.FINE, null, e);
+                LOGGER.log(Level.WARNING, null, e);
             }
             return null;
         }
@@ -333,15 +333,27 @@ public class JarClassLoader extends ProxyClassLoader {
         }
         
         static Source create(File f, JarClassLoader jcl) throws IOException {
-            Source src = f.isDirectory() ? new DirSource(f) : new JarSource(f);
+            boolean directory;
+            if (f.getName().endsWith("jar")) {
+                directory = false;
+            } else {
+                directory = f.isDirectory();
+            }
+            Source src = directory ? new DirSource(f) : new JarSource(f);
             src.jcl = jcl;
             // should better use the same string as other indexes
             // this way, there are currently 3 similar long Strings per
             // JarClassLoader instance - its URL, its identifier
             // in Archive.sources map and this one
-            sources.put(f.toURI().toString(), src);
+            sources.put(src.getPath(), src);
             return src;
         }
+
+        @Override
+        public String toString() {
+            return url.toString();
+        }
+
     }
 
     static class JarSource extends Source {
@@ -352,21 +364,52 @@ public class JarClassLoader extends ProxyClassLoader {
         private boolean dead;
         private int requests;
         private int used;
+        /** #141110: expensive to repeatedly look for them */
+        private final Set<String> nonexistentResources = Collections.synchronizedSet(new HashSet<String>());
         
         JarSource(File file) throws IOException {
-            super(file.toURL());
-            resPrefix = ResURLStreamHandler.RES_PROTO +":" + file.toURI() + "!/"; // NOI18N;
+            this(file, toURI(file));
+        }
+        private JarSource(File file, String resPrefix) throws IOException {
+            super(new URL(resPrefix)); // NOI18N
+            this.resPrefix = resPrefix; // NOI18N;
             this.file = file;
+        }
+
+        public String getPath() {
+            return file.getPath();
+        }
+
+        private static String toURI(final File file) {
+            class VFile extends File {
+                public VFile() {
+                    super(file.getPath());
+                }
+
+                @Override
+                public boolean isDirectory() {
+                    return false;
+                }
+
+                @Override
+                public File getAbsoluteFile() {
+                    return this;
+                }
+            }
+            return "jar:" + new VFile().toURI() + "!/"; // NOI18N
         }
 
         @Override
         public Manifest getManifest() {
             try {
-                return getJarFile("man").getManifest();
-            } catch (IOException e) {
+                byte[] arr = archive.getData(this, "META-INF/MANIFEST.MF");
+                if (arr == null) {
+                    return null;
+                }
+                return new Manifest(new ByteArrayInputStream(arr));
+            } catch (IOException ex) {
+                LOGGER.log(Level.WARNING, "Cannot read manifest for " + getPath(), ex);
                 return null;
-            } finally {
-                releaseJarFile();
             }
         }
         
@@ -402,11 +445,22 @@ public class JarClassLoader extends ProxyClassLoader {
         }
         
         public byte[] resource(String path) throws IOException {
-            ZipEntry ze;
-            JarFile jf = getJarFile(path);
+            if (nonexistentResources.contains(path)) {
+                return null;
+            }
+            JarFile jf;
             try {
-                ze = jf.getEntry(path);
-                if (ze == null) return null;
+                jf = getJarFile(path);
+            } catch (ZipException ex) {
+                LOGGER.log(Level.INFO, "Cannot open " + file, ex);
+                return null;
+            }
+            try {
+                ZipEntry ze = jf.getEntry(path);
+                if (ze == null) {
+                    nonexistentResources.add(path);
+                    return null;
+                }
 
                 LOGGER.log(Level.FINER, "Loading {0} from {1}", new Object[] {path, file.getPath()});
             
@@ -418,10 +472,6 @@ public class JarClassLoader extends ProxyClassLoader {
                     count += is.read(data, count, len-count);
                 }
                 return data;
-            } catch (IllegalStateException ex) {
-                // this exception occurs in org/netbeans/core/lookup/* tests
-                // without this catch statement the tests fail
-                return null;
             } finally {
                 releaseJarFile();
             }
@@ -511,9 +561,13 @@ public class JarClassLoader extends ProxyClassLoader {
         private void doCloseJar() throws IOException {
             synchronized(sources) {
                 if (jar != null) {
-                    if (!sources.remove(this)) System.err.println("Can't remove " + this);
+                    if (!sources.remove(this)) {
+                        LOGGER.warning("Can't remove " + this);
+                    }
+                    LOGGER.log(Level.FINE, "Closing JAR {0}", jar.getName());
                     jar.close();
                     jar = null;
+                    LOGGER.log(Level.FINE, "Remaining open JARs: {0}", sources.size());
                 }
             }
             
@@ -537,7 +591,7 @@ public class JarClassLoader extends ProxyClassLoader {
         }
 
         // JarFile pool tracking
-        private static Set<JarSource> sources = new HashSet<JarSource>();
+        private static final Set<JarSource> sources = new HashSet<JarSource>();
         private static int LIMIT = Integer.getInteger("org.netbeans.JarClassLoader.limit_fd", 300);
 
         static void opened(JarSource source, String forWhat) {
@@ -555,6 +609,8 @@ public class JarClassLoader extends ProxyClassLoader {
                 }
                 
                 sources.add(source); // now register the newly opened
+                LOGGER.log(Level.FINE, "Opening module JAR {0} for {1}", new Object[] {source.file, forWhat});
+                LOGGER.log(Level.FINE, "Currently open JARs: {0}", sources.size());
             }
         }
 
@@ -588,8 +644,12 @@ public class JarClassLoader extends ProxyClassLoader {
         File dir;
         
         DirSource(File file) throws MalformedURLException {
-            super(file.toURL());
+            super(file.toURI().toURL());
             dir = file;
+        }
+        
+        public String getPath() {
+            return dir.getPath();
         }
 
         protected URL doGetResource(String name) throws MalformedURLException {
@@ -664,28 +724,16 @@ public class JarClassLoader extends ProxyClassLoader {
         return known;
     }
     
-    private static class ResURLStreamHandlerFactory implements URLStreamHandlerFactory {
-        URLStreamHandlerFactory del;
-        /**
-         * Creates URLStreamHandler for nbinst protocol
-         * @param protocol
-         * @return NbinstURLStreamHandler if the protocol is nbinst otherwise null
-         */
-        public URLStreamHandler createURLStreamHandler(String protocol) {
-            if (ResURLStreamHandler.RES_PROTO.equals(protocol)) {
-                return new ResURLStreamHandler ();
-            }
-            return del != null ? del.createURLStreamHandler(protocol): null;
-        }
-    }
-    
     /**
      * URLStreamHandler for res protocol
      */
-    private static class ResURLStreamHandler extends URLStreamHandler {
-        public static final String RES_PROTO = "nbjcl";
+    static class ResURLStreamHandler extends URLStreamHandler {
 
-        ResURLStreamHandler() {}
+        private final URLStreamHandler originalJarHandler;
+
+        ResURLStreamHandler(URLStreamHandler originalJarHandler) {
+            this.originalJarHandler = originalJarHandler;
+        }
 
         /**
          * Creates URLConnection for URL with res protocol.
@@ -693,110 +741,50 @@ public class JarClassLoader extends ProxyClassLoader {
          * @return URLConnection
          * @throws IOException
          */
-        protected URLConnection openConnection(URL u) throws IOException {
+        protected JarURLConnection openConnection(URL u) throws IOException {
             String url = u.getFile();//toExternalForm();
             int bang = url.indexOf("!/");
-            String jar = url.substring(0, bang);
+            if (bang == -1) {
+                throw new IOException("Malformed JAR-protocol URL: " + u);
+            }
+            int from;
+            if (url.startsWith("file:")) {
+                from = Utilities.isWindows() ? 6 : 5;
+            } else {
+                from = 0;
+            }
+            String jar = url.substring(from, bang).replace('/', File.separatorChar);
             String _name = url.substring(bang+2);
             Source _src = Source.sources.get(jar);
+            if (_src == null) {
+                try {
+                    Method m = URLStreamHandler.class.getDeclaredMethod("openConnection", URL.class);
+                    m.setAccessible(true);
+                    return (JarURLConnection) m.invoke(originalJarHandler, u);
+                } catch (Exception e) {
+                    throw (IOException) new IOException(e.toString()).initCause(e);
+                }
+            }
             return new ResURLConnection (u, _src, _name);
         }
 
-        protected @Override void parseURL(URL url, String spec, 
-                                int start, int limit) {
-            String file = null;
-            String ref = null;
-            // first figure out if there is an anchor
-            int refPos = spec.indexOf('#', limit);
-            boolean refOnly = refPos == start;
-            if (refPos > -1) {
-                ref = spec.substring(refPos + 1, spec.length());
-                if (refOnly) {
-                    file = url.getFile();
-                }
-            }
-            // then figure out if the spec is 
-            // 1. absolute (res:)
-            // 2. relative (i.e. url + foo/bar/baz.ext)
-            // 3. anchor-only (i.e. url + #foo), which we already did (refOnly)
-            boolean absoluteSpec = false;
-            if (spec.length() >= RES_PROTO.length()+1) {
-                absoluteSpec = spec.substring(0, RES_PROTO.length()+1).equalsIgnoreCase(RES_PROTO+":");
-            }
-            spec = spec.substring(start, limit);
-
-            if (absoluteSpec) {
-                file = parseAbsoluteSpec(spec);
-            } else if (!refOnly) {
-                file = parseContextSpec(url, spec);
-
-                // Canonize the result after the bangslash
-                int bangSlash = file.lastIndexOf("!/") + 1;
-                String toBangSlash = file.substring(0, bangSlash);
-                String afterBangSlash = file.substring(bangSlash);
-                sun.net.www.ParseUtil canonizer = new sun.net.www.ParseUtil(); // XXX
-                afterBangSlash = canonizer.canonizeString(afterBangSlash);
-                file = toBangSlash + afterBangSlash;
-            }
-            setURLOK(url, file, ref);	
-        }
-        
-        @SuppressWarnings("deprecation")
-        private void setURLOK(URL url, String file, String ref) {
-            super.setURL(url, RES_PROTO, "", -1, file, ref);	
-        }
-
-        private String parseAbsoluteSpec(String spec) {
-            URL url = null;
-            int index = -1;
-            // check for !/
-            if ((index = spec.lastIndexOf("!/") + 1) == -1) {
-                throw new NullPointerException("no !/ in spec");
-            }
-            // test the inner URL
-            try {
-                String innerSpec = spec.substring(0, index - 1);
-                url = new URL(innerSpec);
-            } catch (MalformedURLException e) {
-                throw new NullPointerException("invalid url: " + 
-                                               spec + " (" + e + ")");
-            }
-            return spec;
-        }
-
-        private String parseContextSpec(URL url, String spec) {
-            String ctxFile = url.getFile();
-            // if the spec begins with /, chop up the jar back !/
+        @Override
+        protected void parseURL(URL u, String spec, int start, int limit) {
             if (spec.startsWith("/")) {
-                int bangSlash = ctxFile.lastIndexOf("!/");
-                if (bangSlash == -1) {
-                    throw new NullPointerException("malformed " +
-                                                   "context url:" +
-                                                   url + 
-                                                   ": no !/");
-                }
-                ctxFile = ctxFile.substring(0, bangSlash+1);
+                setURL(u, "jar", null, 0, null, null, u.getFile().replaceFirst("!/.+$", "!" + spec), u.getQuery(), u.getRef()); // NOI18N
+            } else {
+                super.parseURL(u, spec, start, limit);
             }
-            if (!ctxFile.endsWith("/") && (!spec.startsWith("/"))){
-                // chop up the last component
-                int lastSlash = ctxFile.lastIndexOf('/');
-                if (lastSlash == -1) {
-                    throw new NullPointerException("malformed " +
-                                                   "context url:" +
-                                                   url);
-                }
-                ctxFile = ctxFile.substring(0, lastSlash + 1);
-            }
-            return (ctxFile + spec);
         }
+
     }
 
     /** URLConnection for URL with res protocol.
      *
      */
-    private static class ResURLConnection extends URLConnection {
+    private static class ResURLConnection extends JarURLConnection {
         private JarSource src;
-        private String name;
+        private final String name;
         private byte[] data;
         private InputStream iStream;
 
@@ -805,17 +793,31 @@ public class JarClassLoader extends ProxyClassLoader {
          * @param url the parameter for which the connection should be
          * created
          */
-        private ResURLConnection(URL url, Source src, String name) {
+        private ResURLConnection(URL url, Source src, String name) throws MalformedURLException {
             super(url);
             this.src = (JarSource)src;
             this.name = name;
         }
 
+        private boolean isFolder() {
+            return name.length() == 0 || name.endsWith("/");
+        }
 
         public void connect() throws IOException {
+            if (isFolder()) {
+                return; // #139087: odd but harmless
+            }
             if (data == null) {
                 data = src.getClassData(name);
+                if (data == null) {
+                    throw new FileNotFoundException(getURL().toString());
+                }
             }
+        }
+
+        @Override
+        public long getLastModified() {
+            return Stamps.getModulesJARs().lastModified();
         }
 
         @Override
@@ -828,6 +830,9 @@ public class JarClassLoader extends ProxyClassLoader {
         }
 
         public @Override int getContentLength() {
+            if (isFolder()) {
+                return -1;
+            }
             try {
                 this.connect();
                 return data.length;
@@ -838,9 +843,17 @@ public class JarClassLoader extends ProxyClassLoader {
 
 
         public @Override InputStream getInputStream() throws IOException {
+            if (isFolder()) {
+                throw new IOException("Cannot open a folder"); // NOI18N
+            }
             this.connect();
             if (iStream == null) iStream = new ByteArrayInputStream(data);
             return iStream;
+        }
+
+        @Override
+        public JarFile getJarFile() throws IOException {
+            return new JarFile(src.file); // #134424
         }
     }
 }
